@@ -3,6 +3,7 @@
 - Fix failure when system properties modified when loading configuration
 - Update Jackson to 2.17.1
 - Update Jersey to 3.1.7
+- Support generic list and set injection into configuration classes
 
 248
 
